feat: create of header

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/styles.css">
     <title>Meu Portfólio</title>
 </head>
+
 <body>
-    <h1>Meu Portfólio Da hora</h1>
+    <header class="header">
+        <a href="#home" class="logo">Luiz <span>Dev</span></a>
+
+        <nav class="navbar">
+            <a href="#home" class="active">Início</a>
+            <a href="#education">Acadêmico</a>
+            <a href="#services">Serviços</a>
+            <a href="#testimonials">Depoimentos</a>
+            <a href="#contact">Contatos</a>
+        </nav>
+    </header>
+
 </body>
+
 </html>
